// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Packages | Form/Select Autocomplete 1`] = `
.c2 {
  position: relative;
  font-size: 0.866rem;
  color: #7189B6;
  line-height: 1.8;
  display: inline-block;
  text-align: left;
}

.c3 {
  position: relative;
  border-radius: inherit;
}

.c4 {
  vertical-align: middle;
  height: 1.93267rem;
  position: relative;
  display: block;
  width: 100%;
  line-height: 1;
  box-sizing: border-box;
  background-color: #ffffff;
  border: 1px solid #C4D2EB;
  border-radius: 4px;
  -webkit-transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
  transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
  outline: 0;
  z-index: 5;
  font-size: 1rem;
  padding: 0.46633rem 0.8rem;
  color: #456297;
  padding-left: 2.2em;
}

.c4::-webkit-input-placeholder {
  color: #95ACD4;
}

.c4::-moz-placeholder {
  color: #95ACD4;
}

.c4:-ms-input-placeholder {
  color: #95ACD4;
}

.c4::placeholder {
  color: #95ACD4;
}

.c4:focus {
  outline: 0;
  border: 1px solid #0E86FE;
  box-shadow: 0 0 0 2px rgba(14,134,254,0.2);
  z-index: 7;
}

.c4:disabled {
  pointer-events: none;
  border-color: #C4D2EB;
  background-color: #EEF2FC;
}

.c1 {
  display: block;
  margin-bottom: 1.333rem;
  position: relative;
  width: 100%;
}

.c0 {
  max-width: 500px;
  padding: 40px;
}

<div
  className="c0"
>
  <div
    aria-expanded={false}
    aria-haspopup="listbox"
    aria-labelledby="downshift-1-label"
    aria-owns={null}
    role="combobox"
  >
    <div
      className="vital__fieldInput c1"
    >
      <span
        className="vital__label c2"
        required={false}
      />
      <div
        className="c3"
      >
        <input
          aria-activedescendant={null}
          aria-autocomplete="list"
          aria-controls={null}
          aria-labelledby="downshift-1-label"
          autoComplete="off"
          autoFocus={false}
          className="vital__input c4"
          disabled={false}
          id="downshift-1-input"
          onBlur={[Function]}
          onChange={[Function]}
          onKeyDown={[Function]}
          placeholder={null}
          spellCheck={false}
          type="text"
          value=""
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Packages | Form/Select Dropdown 1`] = `
.c2 {
  position: relative;
  font-size: 0.866rem;
  color: #7189B6;
  line-height: 1.8;
  display: inline-block;
  text-align: left;
}

.c1 {
  display: block;
  margin-bottom: 1.333rem;
  position: relative;
  width: 100%;
}

.c3 {
  width: 100%;
  position: relative;
  margin: 0;
  padding: calc(0.533rem - 1px) 1.066rem;
  border-radius: 4px;
  font-size: 1rem;
  line-height: 1.2;
  box-sizing: border-box;
  vertical-align: middle;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  color: #456297;
  border: 1px solid #C4D2EB;
  z-index: 5;
  outline: 0;
  text-align: left;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 {
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100%;
}

.c0 {
  max-width: 500px;
  padding: 40px;
}

<div
  className="c0"
>
  <div
    aria-expanded={false}
    aria-haspopup="listbox"
    aria-labelledby="downshift-0-label"
    aria-owns={null}
    role="combobox"
  >
    <div
      className="vital__fieldInput c1"
    >
      <span
        className="vital__label c2"
        required={false}
      />
      <div
        aria-haspopup={true}
        aria-label="open menu"
        className="c3"
        data-toggle={true}
        onBlur={[Function]}
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        role="button"
        type="button"
      >
        <span
          className="c4"
        >
          Select an item
        </span>
        <svg
          fontSize={15}
          height="1em"
          name="caret-down"
          viewBox="0 0 960 256"
          width="1em"
        >
          <defs />
          <g
            data-name="Layer 2"
            id="Layer_2"
          >
            <g
              id="icon"
            >
              <path
                className="cls-1"
                d="M128 0a128 128 0 1 0 128 128A128.14 128.14 0 0 0 128 0zm0 192a64 64 0 1 1 64-64 64.07 64.07 0 0 1-64 64zM480 0a128 128 0 1 0 128 128A128.14 128.14 0 0 0 480 0zm0 192a64 64 0 1 1 64-64 64.07 64.07 0 0 1-64 64zM832 0a128 128 0 1 0 128 128A128.14 128.14 0 0 0 832 0zm0 192a64 64 0 1 1 64-64 64.07 64.07 0 0 1-64 64z"
              />
            </g>
          </g>
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Packages | Form/Select Tag 1`] = `
.c2 {
  position: relative;
  font-size: 0.866rem;
  color: #7189B6;
  line-height: 1.8;
  display: inline-block;
  text-align: left;
}

.c1 {
  display: block;
  margin-bottom: 1.333rem;
  position: relative;
  width: 100%;
}

.c4 {
  font-size: 1rem;
  padding: 0.46633rem 0.8rem;
  color: #456297;
  border: 0;
  outline: 0;
  height: 1.93267rem;
  width: 100px;
  border-radius: inherit;
}

.c3 {
  position: relative;
  display: block;
  width: 100%;
  line-height: 1;
  box-sizing: border-box;
  background-color: #ffffff;
  border: 1px solid #C4D2EB;
  border-radius: 4px;
  -webkit-transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
  transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
  outline: 0;
  z-index: 5;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  cursor: pointer;
  overflow: hidden;
}

.c0 {
  max-width: 500px;
  padding: 40px;
}

<div
  className="c0"
>
  <div
    aria-expanded={false}
    aria-haspopup="listbox"
    aria-labelledby="downshift-2-label"
    aria-owns={null}
    role="combobox"
  >
    <div
      className="vital__fieldInput c1"
    >
      <span
        className="vital__label c2"
        required={false}
      />
      <div
        className="c3"
        onClick={[Function]}
      >
        <input
          aria-activedescendant={null}
          aria-autocomplete="list"
          aria-controls={null}
          aria-labelledby="downshift-2-label"
          autoComplete="off"
          className="c4"
          id="downshift-2-input"
          onBlur={[Function]}
          onChange={[Function]}
          onKeyDown={[Function]}
          value=""
        />
      </div>
    </div>
  </div>
</div>
`;
